--- a/docker-compose-generator/docker-fragments/opt-save-storage-xxs.yml
+++ b/docker-compose-generator/docker-fragments/opt-save-storage-xxs.yml
@@ -30,3 +30,6 @@ services:
   monacoind:
     environment:
       BITCOIN_EXTRA_ARGS: prune=5000
+  vertcoind:
+    environment:
+      BITCOIN_EXTRA_ARGS: prune=5000
